# 2023SE_word-list

./: .gitignore  CMakeLists.txt  README.md  core.lib
TestResults/54f115a2-e80c-4ebc-978c-e6ccefadda46/: 12740_LAPTOP-DOD4E0BJ 2023-03-15 02_10_47.coverage
TestResults/819e68f8-844a-48fe-93c6-c729b788fdb2/: 12740_LAPTOP-DOD4E0BJ 2023-03-14 20_23_44.coverage
TestResults/9f91493b-8409-4290-8a25-eeb233064901/: 12740_LAPTOP-DOD4E0BJ 2023-03-15 01_32_09.coverage
TestResults/b2fffdf2-93af-48ca-816e-5baf6c9eb6fb/: 12740_LAPTOP-DOD4E0BJ 2023-03-14 12_29_59.coverage
TestResults/b8c8a725-37fc-4b49-9af0-6d6562f6035c/: 12740_LAPTOP-DOD4E0BJ 2023-03-14 12_43_24.coverage
TestResults/c6f68244-6864-4b5d-929e-ff2c902ac024/: 12740_LAPTOP-DOD4E0BJ 2023-03-14 21_16_16.coverage
UnitTest1/: UnitTest1.cpp  UnitTestException.cpp
gui_exchange/: GUI.py  main.py
src/: Algorithm.h  C_Solver.h  Core.h  ExceptionHandler.h  MaxWordWithRing.h  N_Slover.h  W_Slover.h  WithRingSolver.h  word_list.cpp  word_list.h
test/: UnitTest1.cpp  test.cpp
